attempt to fix ConcurrentModificationException in RenderFeature: synchronized collection for global stations, optimise highly suboptimal algorithm (createListOfClosestStations)